--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </div>
             </div>
           </div>
-          <h2 class="text-center">DISEÑOS NIÑOS</h2>
+        <h2 class="text-center">DISEÑOS NIÑOS</h2>
         <div class="col-md-4 mb-4">
             <div class="card">
               <img src="./images/niño1.jpg" class="card-img-top" alt="Producto 5">
@@ -153,6 +153,67 @@
         <div class="col-md-4 mb-4">
             <div class="card">
               <img src="./images/niño6.jpg" class="card-img-top" alt="Producto 5">
+              <div class="card-body">
+                <h5 class="text-center">Taza Personalizada</h5>
+                <p class="text-center">Taza sublimada con diseño único.</p>
+                <p class="text-primary fw-bold text-center">22 Bs</p>
+              </div>
+            </div>
+        </div>
+        <h2 class="text-center">DISEÑOS GRADUACION</h2>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./images/Graduado.jpg" class="card-img-top" alt="Producto 5">
+              <div class="card-body">
+                <h5 class="text-center">Taza Personalizada</h5>
+                <p class="text-center">Taza sublimada con diseño único.</p>
+                <p class="text-primary fw-bold text-center">22 Bs</p>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./images/Graduado2.jpg" class="card-img-top" alt="Producto 5">
+              <div class="card-body">
+                <h5 class="text-center">Taza Personalizada</h5>
+                <p class="text-center">Taza sublimada con diseño único.</p>
+                <p class="text-primary fw-bold text-center">22 Bs</p>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./images/Graduado3.jpg" class="card-img-top" alt="Producto 5">
+              <div class="card-body">
+                <h5 class="text-center">Taza Personalizada</h5>
+                <p class="text-center">Taza sublimada con diseño único.</p>
+                <p class="text-primary fw-bold text-center">22 Bs</p>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./images/Graduado4.jpg" class="card-img-top" alt="Producto 5">
+              <div class="card-body">
+                <h5 class="text-center">Taza Personalizada</h5>
+                <p class="text-center">Taza sublimada con diseño único.</p>
+                <p class="text-primary fw-bold text-center">22 Bs</p>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./images/Graduado5.jpg" class="card-img-top" alt="Producto 5">
+              <div class="card-body">
+                <h5 class="text-center">Taza Personalizada</h5>
+                <p class="text-center">Taza sublimada con diseño único.</p>
+                <p class="text-primary fw-bold text-center">22 Bs</p>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="./images/Graduado6.jpg" class="card-img-top" alt="Producto 5">
               <div class="card-body">
                 <h5 class="text-center">Taza Personalizada</h5>
                 <p class="text-center">Taza sublimada con diseño único.</p>
