--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
   </footer>
 
   <!-- WhatsApp Float Button -->
-  <a href="https://wa.me/59112345678" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition-all z-50">
-    <i class="fab fa-whatsapp text-2xl"></i>
-  </a>
+    <a href="https://wa.me/59169608947" target="_blank" class="fixed bottom-6 right-6 bg-green-500 text-white p-4 rounded-full shadow-lg hover:bg-green-600 transition-colors duration-300 z-50">
+        <i class="fab fa-whatsapp text-2xl"></i>
+    </a>
 
   <!-- Back to Top Button -->
   <button id="back-to-top" class="fixed bottom-6 left-6 bg-blue-600 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 transition-all hidden z-50">
